fabric/testdata/out/ing_smart-product-platform-test-gateway-delete-issues-id-non-whitelisted.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"Weight(3)
      \u0026\u0026 Path(\"/issues/:id\") \u0026\u0026 Method(\"DELETE\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\") -\u003e status(403) -\u003e unverifiedAuditLog(\"sub\")
      -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":403,\\\"detail\\\":\\\"Illegal
      attempt to access whitelisted route\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"smart-product-platform-test","component":"service","controller-uid":"d3827fcf-dbf7-4d68-9e09-27e82003d0db","deployment-id":"d-sgokz8f17ukn9f5xqjnpf9xuk","environment":"staging","pipeline-id":"l-2dwhxqk9wh3m6ur6ovucqfumec","version":"master-13"},"name":"smart-product-platform-test-gateway-delete-issues-id-non-whitelisted","namespace":"default"},"spec":{"rules":[{"host":"spp-product-details.smart [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: Weight(3) && Path("/issues/:id") && Method("DELETE")
      && Header("X-Forwarded-Proto", "https") -> status(403) -> unverifiedAuditLog("sub")
      -> inlineContent("{\"title\":\"Gateway Rejected\",\"status\":403,\"detail\":\"Illegal
      attempt to access whitelisted route\"}") -> <shunt>
  creationTimestamp: "2021-07-06T12:27:21Z"
  generation: 1
  labels:
    application: smart-product-platform-test
    component: service
    controller-uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
    deployment-id: d-sgokz8f17ukn9f5xqjnpf9xuk
    environment: staging
    pipeline-id: l-2dwhxqk9wh3m6ur6ovucqfumec
    version: master-13
  name: smart-product-platform-test-gateway-delete-issues-id-non-whitelisted
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: smart-product-platform-test-gateway
    uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
  resourceVersion: "1357488768"
  uid: 953e9294-e90c-4469-8010-9fdb1922a9bf
spec:
  rules:
  - host: spp-product-details.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: smart-product-platform-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
